package io.gitlab.plunts.gradle.plantuml.examples.app;

public class ExampleApplication {

  public static void main(String[] args) {
  }

}
